salesforce/force-app/main/default/objects/CPQ_Approval_Threshold__mdt/CPQ_Approval_Threshold__mdt.object-meta.xml
<CustomObject>
    <description>Defines discount thresholds that trigger approval requirements. Evaluated by get_approval_requirements against a quote's effective discount percentage.</description>
    <label>CPQ Approval Threshold</label>
    <pluralLabel>CPQ Approval Thresholds</pluralLabel>
</CustomObject>