salesforce/force-app/main/default/objects/CPQ_Approval_Threshold__mdt/fields/ApproverRole__c.field-meta.xml
<CustomField>
    <fullName>ApproverRole__c</fullName>
    <label>Approver Role</label>
    <length>100</length>
    <type>Text</type>
    <description>Salesforce Role name of the required approver. Used to route the Approval Process step.</description>
</CustomField>