salesforce/force-app/main/default/objects/CPQ_Approval_Threshold__mdt/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <label>Customer Segment</label>
    <length>50</length>
    <type>Text</type>
    <description>Restricts this threshold to a specific customer segment. Blank applies to all segments.</description>
</CustomField>