salesforce/force-app/main/default/objects/CPQ_Approval_Threshold__mdt/fields/DiscountThreshold__c.field-meta.xml
<CustomField>
    <fullName>DiscountThreshold__c</fullName>
    <label>Discount Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Effective discount percentage at or above which this approval rule fires.</description>
</CustomField>