salesforce/force-app/main/default/objects/CPQ_Approval_Threshold__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>Inactive thresholds are excluded from approval requirement checks.</description>
</CustomField>