salesforce/force-app/main/default/objects/CPQ_Approval_Threshold__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Lower number = evaluated first. The highest-priority matching threshold determines the required approver.</description>
</CustomField>